# sb3

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: main.yml
builder/: Dockerfile
data/: config.json  init.json  items.json  manufacturers.json  names.json  needs.json  production_cycles.json  production_cycles2.json
scripts/: fetch_release.ps1  fetch_release.sh
src/: build.rs  business.rs  commands.rs  config.rs  debug_ui.rs  govement.rs  government.rs  init.rs  invariants.rs  logs.rs  logs_ui.rs  main.rs  money.rs  people.rs  stats.rs  ui.rs  user_input.rs  wallet.rs
src/ui/: config.rs  debug.rs  logs.rs  main_layout.rs  manufacturers.rs  mod.rs  people.rs  prices.rs  template.rs  utilities.rs
