[workspace]
members = [
    ".",
    "macros"
]

[package]
name = "sb3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
macros = { path = "macros" }
# run with cargo run --features bevy/dynamic_linking instead of inlcuding this feature so CICD works without issue
bevy = { version = "0.10" }
# open_url and manage_clipboard are disabled as not yet needed
bevy_egui = { version = "0.20", features = ["arboard", "default_fonts", "thread_local", "webbrowser"] }
enum-display-derive = "0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
quickcheck_macros = "1.0"
quickcheck = "1.0"

#[[test]]
#name = "business_tests"
#path = "tests/business_tests.rs"